[fix] リンク生成時の表示文変更

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ludeus Web",
+  "name": "Ludeus Web for LearnFi",
   "icons": [
     {
       "src": "favicon.ico",
